# bthome-weather-station

./: .clang-format  .editorconfig  ARCHITECTURE.md  CHANGELOG.md  CMakeLists.txt  README.md  format.sh  sdkconfig  sdkconfig.old
.cmake/: clang-format.cmake
.github/workflows/: ci.yml
components/BME280/: BME280.cpp  BME280.h  CMakeLists.txt
components/bthome/: CMakeLists.txt  advertisement.cpp  advertisement.h  advertisement_element.cpp  constants.cpp  constants.h  measurement.cpp  measurement.h  sensor.cpp  sensor.h
components/i2c/: CMakeLists.txt  i2cBus.cpp
main/: BME280.cpp  BME280.h  CMakeLists.txt  SHT40.h  blackboard.cpp  blackboard.h  bthome.c  bthome.cpp  bthome.h  bthome.hpp  config.h  main.c  main.cpp  task_ble.c  task_ble.cpp  task_read_sensors.c  task_read_sensors.cpp  tasks.h
main/bthome/: CMakeLists.txt  advertisement.h
main/sensors/: BME280.cpp  BME280.h  CMakeLists.txt  i2cBus.cpp  i2cBus.h
